--- a/header.html
+++ b/header.html
@@ -94,15 +94,15 @@
 								<li> <a href="javascript:;">小童軍團<i class="fa fa-chevron-down"></i></a>
 									<!-- <li> <a href="javascript:;">Features<i class="fa fa-chevron-down"></i></a> -->
 									<ul class="sub-menu">
-                    <li><a href="young-scouts-intro">介紹</a></li>
-                    <li><a href="young-scouts-leader">領袖</a></li>
-                    <li><a href="young-scouts-awards">獎項</a></li>
-                    <li><a href="young-scouts-gallery">相簿</a></li>
-                    <li><a href="young-scouts-notice">通告</a></li>
-                    <li><a href="young-scouts-uniform">小童軍制服</a></li>
+                    <li><a href="young-scouts-intro.html">介紹</a></li>
+                    <li><a href="young-scouts-leader.html">領袖</a></li>
+                    <li><a href="young-scouts-awards.html">獎項</a></li>
+                    <li><a href="young-scouts-gallery.html">相簿</a></li>
+                    <li><a href="young-scouts-notice.html">通告</a></li>
+                    <li><a href="young-scouts-uniform.html">小童軍制服</a></li>
 										<li> <a href="javascript:;">小童軍有用資料</a>
 											<ul class="sub-menu">
-												<li><a href="young-scouts-leaveLink">請假連結</a></li>
+												<li><a href="young-scouts-leaveLink.html">請假連結</a></li>
 											</ul>
 										</li>
 									</ul>
@@ -110,34 +110,34 @@
 								<li> <a href="javascript:;">幼童軍團<i class="fa fa-chevron-down"></i></a>
 									<!-- <li> <a href="javascript:;">Pages<i class="fa fa-chevron-down"></i></a> -->
                     <ul class="sub-menu">
-                        <li><a href="cub-scout-intro">介紹</a></li>
-                        <li><a href="cub-scout-leader">領袖</a></li>
-                        <li><a href="cub-scout-awards">獎項</a></li>
-                        <li><a href="cub-scout-gallery">相簿</a></li>
-                        <li><a href="cub-scout-notice">通告</a></li>
-                        <li><a href="cub-scout-manual">幼童軍手册</a></li>
-                        <li><a href="cub-scout-uniform">小童軍制服</a></li>
+                        <li><a href="cub-scout-intro.html">介紹</a></li>
+                        <li><a href="cub-scout-leader.html">領袖</a></li>
+                        <li><a href="cub-scout-awards.html">獎項</a></li>
+                        <li><a href="cub-scout-gallery.html">相簿</a></li>
+                        <li><a href="cub-scout-notice.html">通告</a></li>
+                        <li><a href="cub-scout-manual.html">幼童軍手册</a></li>
+                        <li><a href="cub-scout-uniform.html">小童軍制服</a></li>
                         <li> <a href="javascript:;">小童軍有用資料</a>
                           <ul class="sub-menu">
-                            <li><a href="cub-scout-info#info1">請假連結</a></li>
-                            <li><a href="cub-scout-info#info2">善行紀錄表</a></li>
+                            <li><a href="cub-scout-info.html#info1">請假連結</a></li>
+                            <li><a href="cub-scout-info.html#info2">善行紀錄表</a></li>
                           </ul>
                         </li>
                       </ul>
 								</li>
 								<li> <a href="javascript:;">童軍團<i class="fa fa-chevron-down"></i></a>
                   <ul class="sub-menu">
-                      <li><a href="scout-troop-intro">介紹</a></li>
-                      <li><a href="scout-troop-leader">領袖</a></li>
-                      <li><a href="scout-troop-awards">獎項</a></li>
-                      <li><a href="scout-troop-gallery">相簿</a></li>
-                      <li><a href="scout-troop-notice">通告</a></li>
+                      <li><a href="scout-troop-intro.html">介紹</a></li>
+                      <li><a href="scout-troop-leader.html">領袖</a></li>
+                      <li><a href="scout-troop-awards.html">獎項</a></li>
+                      <li><a href="scout-troop-gallery.html">相簿</a></li>
+                      <li><a href="scout-troop-notice.html">通告</a></li>
                       <li><a href="scout-troop-trainingProgram">童軍訓練綱要</a></li>
                       <li> <a href="javascript:;">童軍有用資料</a>
                         <ul class="sub-menu">
-                          <li><a href="scout-troop-info#info1">童軍支部各級徽章簽發及領取/購買方法</a></li>
-                          <li><a href="scout-troop-info#info2">支部最高獎章標誌</a></li>
-                          <li><a href="scout-troop-info#info3">童軍支部「童軍探索奬章」與幼童軍支部各級徽章豁免考驗安排</a></li>
+                          <li><a href="scout-troop-info.html#info1">童軍支部各級徽章簽發及領取/購買方法</a></li>
+                          <li><a href="scout-troop-info.html#info2">支部最高獎章標誌</a></li>
+                          <li><a href="scout-troop-info.html#info3">童軍支部「童軍探索奬章」與幼童軍支部各級徽章豁免考驗安排</a></li>
                         </ul>
                       </li>
                     </ul>
@@ -145,26 +145,26 @@
 								<li> <a href="javascript:;">深資童軍團<i class="fa fa-chevron-down"></i></a>
 									<!-- <li> <a href="javascript:;">Blog<i class="fa fa-chevron-down"></i></a> -->
                     <ul class="sub-menu">
-                        <li><a href="senior-scout-intro">介紹</a></li>
-                        <li><a href="senior-scout-leader">領袖</a></li>
-                        <li><a href="senior-scout-awards">獎項</a></li>
-                        <li><a href="senior-scout-committee">執行委員會</a></li>
-                        <li><a href="senior-scout-gallery">相簿</a></li>
-                        <li><a href="senior-scout-notice">通告</a></li>
-                        <li><a href="senior-scout-train">深資童軍訓練綱要</a></li>
-                        <li><a href="senior-scout-info">深資童軍有用資料</a></li>
+                        <li><a href="senior-scout-intro.html">介紹</a></li>
+                        <li><a href="senior-scout-leader.html">領袖</a></li>
+                        <li><a href="senior-scout-awards.html">獎項</a></li>
+                        <li><a href="senior-scout-committee.html">執行委員會</a></li>
+                        <li><a href="senior-scout-gallery.html">相簿</a></li>
+                        <li><a href="senior-scout-notice.html">通告</a></li>
+                        <li><a href="senior-scout-train.html">深資童軍訓練綱要</a></li>
+                        <li><a href="senior-scout-info.html">深資童軍有用資料</a></li>
                     </ul>
                 </li>
 								<li> <a href="javascript:;">樂行童軍團<i class="fa fa-chevron-down"></i></a>
                     <ul class="sub-menu">
-                        <li><a href="rover-scout-intro">介紹</a></li>
-                        <li><a href="rover-scout-leader">領袖</a></li>
-                        <li><a href="rover-scout-awards">獎項</a></li>
-                        <li><a href="rover-scout-committee">管理委員會</a></li>
-                        <li><a href="rover-scout-gallery">相簿</a></li>
-                        <li><a href="rover-scout-notice">通告</a></li>
-                        <li><a href="rover-scout-train">樂行童軍訓練綱要</a></li>
-                        <li><a href="rover-scout-info">樂行童軍有用資料</a></li>
+                        <li><a href="rover-scout-intro.html">介紹</a></li>
+                        <li><a href="rover-scout-leader.html">領袖</a></li>
+                        <li><a href="rover-scout-awards.html">獎項</a></li>
+                        <li><a href="rover-scout-committee.html">管理委員會</a></li>
+                        <li><a href="rover-scout-gallery.html">相簿</a></li>
+                        <li><a href="rover-scout-notice.html">通告</a></li>
+                        <li><a href="rover-scout-train.html">樂行童軍訓練綱要</a></li>
+                        <li><a href="rover-scout-info.html">樂行童軍有用資料</a></li>
                     </ul>
 								</li>
 								<li class="has-mega-menu "> <a href="javascript:;">下載區<i class="fa fa-chevron-down"></i></a>
@@ -212,9 +212,9 @@
 								</li>
 								<li> <a href="javascript:;">有用資料 <i class="fa fa-chevron-down"></i></a>
                   <ul class="sub-menu">
-                      <li><a href="useful-info#info1">儀容與制服手册</a></li>
-                      <li><a href="useful-info#info2">惡劣天氣及空氣污染應變措施</a></li>
-                      <li><a href="useful-info#info3">進行童軍先鋒工程活動安全須知</a></li>
+                      <li><a href="useful-info.html#info1">儀容與制服手册</a></li>
+                      <li><a href="useful-info.html#info2">惡劣天氣及空氣污染應變措施</a></li>
+                      <li><a href="useful-info.html#info3">進行童軍先鋒工程活動安全須知</a></li>
                   </ul>
 								</li>
 							</ul>
