--- a/young-scouts-awards.html
+++ b/young-scouts-awards.html
@@ -293,7 +293,7 @@
         <div class="w3-bnr-inr overlay-black-middle" style="background-image:url(images/scouts/img-youngScouts-bg.jpg);">
             <div class="container">
                 <div class="w3-bnr-inr-entry">
-                    <h1 class="text-white">小童軍團介紹</h1>
+                    <h1 class="text-white">小童軍團獎項</h1>
                 </div>
             </div>
         </div>
@@ -303,36 +303,45 @@
             <div class="container">
                 <ul class="list-inline">
                     <li><a href="#">Home</a></li>
-                    <li>介紹</li>
+                    <li>小童軍團獎項</li>
                 </ul>
             </div>
         </div>
         <!-- Breadcrumb row END -->
-        <!-- contact area -->
-        <div class="content-area">
-            <!-- who we are -->
-            <div class="container">
-                <div class="row">
+      <!-- contact area -->
+      <div class="content-area">
+          <!-- who we are -->
+          <div class="container">
+            <div class="row">
                     <!-- Side Bar -->
                     <div class="col-md-12">
                         <div>
-                            <h1 class="m-b20 m-t0 hkg-blue">介紹</h1>
-                            <div class="w3-separator bg-primary"></div>
-                            <p>
-                                小童軍團現由八個小隊共五十二名隊員組成，均來自小一及小二之學生。現時團務由四位正式委位之領袖及八位家長領袖負責。除星期六於小學校舍舉行之例行集會外，本團亦於2018年11月17至18日， 在洞梓童軍中心舉行了小童軍親子大露營，共有超過150位成員及家長參加。 今年，於2019年1月12日，我們招募了25位新小童軍成員並進行宣誓; 另有24位去年的小童軍成員晉升幼童軍團。於2019年3月31日，我們參加了港島西區區總監盃比賽並獲得亞軍。
-                            </p>
+                            <h2 class="m-t30 m-b10 hkg-blue">小童軍團獎項</h2>
+                            <ul class="list-check-circle primary">
+                                <li><h4 class="w3-title m-t0"><span class="hkg-org">2019</span> 小童軍團 - 全港深資童軍錦標賽，團隊機智項目冠軍</h4></li>
+                                <li><h4 class="w3-title m-t0"><span class="hkg-org">2018</span> 小童軍團 - 區總監盃冠軍</h4></li>
+                                <li><h4 class="w3-title m-t0"><span class="hkg-org">2017</span> 小童軍團 - 全港深資童軍錦標賽，野外挑戰項目亞軍</h4></li>
+                                <li><h4 class="w3-title m-t0"><span class="hkg-org">2015</span> 小童軍團 - 嘉爾頓錦標西區選拔賽冠軍</h4></li>
+                                <li><h4 class="w3-title m-t0"><span class="hkg-org">2015</span> 小童軍團 - 香港總監挑戰盾西區選拔賽亞軍</h4></li>
+                                <li><h4 class="w3-title m-t0"><span class="hkg-org">2014</span> 小童軍團 - 全港深資童軍錦標賽總亞軍，野外挑戰項目亞軍</h4></li>
+                                <li><h4 class="w3-title m-t0"><span class="hkg-org">2012</span> 小童軍團 - 全港嘉爾頓錦標賽總冠</h4></li>
+                                <li><h4 class="w3-title m-t0"><span class="hkg-org">2009</span> 小童軍團 - 嘉爾頓錦標西區選拔賽冠軍</h4></li>
+                                <li><h4 class="w3-title m-t0"><span class="hkg-org">2007</span> 小童軍團 - 嘉爾頓錦標西區選拔賽冠軍</h4></li>
+                                <li><h4 class="w3-title m-t0"><span class="hkg-org">2005</span> 小童軍團 - 嘉爾頓錦標西區選拔賽亞軍</h4></li>
+                                <li><h4 class="w3-title m-t0"><span class="hkg-org">2003</span> 小童軍團 - 全港深資童軍錦標賽總亞軍</h4></li>
+                                <li><h4 class="w3-title m-t0"><span class="hkg-org">2002</span> 小童軍團 - 全港深資童軍錦標賽，遠足項目及團隊機智項目冠軍</h4></li>
+                                <li><h4 class="w3-title m-t0"><span class="hkg-org">2000</span> 小童軍團 - 嘉爾頓錦標總冠軍</h4></li>
+                                <li><h4 class="w3-title m-t0"><span class="hkg-org">1993</span> 小童軍團 - 威爾斯太子錦標總亞軍</h4></li>
+                                <li><h4 class="w3-title m-t0"><span class="hkg-org">1953</span> 小童軍團 - 威爾斯太子錦標冠軍</h4></li> 
+                                <li><h4 class="w3-title m-t0"><span class="hkg-org">1933</span> 小童軍團 - 威爾斯太子錦標冠軍</h4></li>
+                            </ul>
                         </div>
-                        <!-- img -->
-                        <div class="m-b20 col-md-12">
-                            <img style="width: 100%;" src="images/scouts/img-youngScouts-bg.jpg" alt="">
-                        </div>
-                        <!-- img -->
                     </div>
                     <!-- Side Bar END -->
-                    <!-- Right Bar -->
-                </div>
+              <!-- Right Bar -->
             </div>
-            <!-- who we are END -->
+          </div>
+          <!-- who we are END -->
         </div>
         <!-- contact area  END -->
     </div>
