--- a/young-scouts-leader.html
+++ b/young-scouts-leader.html
@@ -293,7 +293,7 @@
         <div class="w3-bnr-inr overlay-black-middle" style="background-image:url(images/scouts/img-youngScouts-bg.jpg);">
             <div class="container">
                 <div class="w3-bnr-inr-entry">
-                    <h1 class="text-white">小童軍團介紹</h1>
+                    <h1 class="text-white">小童軍團領袖</h1>
                 </div>
             </div>
         </div>
@@ -308,31 +308,157 @@
             </div>
         </div>
         <!-- Breadcrumb row END -->
-        <!-- contact area -->
-        <div class="content-area">
-            <!-- who we are -->
-            <div class="container">
-                <div class="row">
-                    <!-- Side Bar -->
-                    <div class="col-md-12">
-                        <div>
-                            <h1 class="m-b20 m-t0 hkg-blue">介紹</h1>
-                            <div class="w3-separator bg-primary"></div>
-                            <p>
-                                小童軍團現由八個小隊共五十二名隊員組成，均來自小一及小二之學生。現時團務由四位正式委位之領袖及八位家長領袖負責。除星期六於小學校舍舉行之例行集會外，本團亦於2018年11月17至18日， 在洞梓童軍中心舉行了小童軍親子大露營，共有超過150位成員及家長參加。 今年，於2019年1月12日，我們招募了25位新小童軍成員並進行宣誓; 另有24位去年的小童軍成員晉升幼童軍團。於2019年3月31日，我們參加了港島西區區總監盃比賽並獲得亞軍。
-                            </p>
+      <!-- contact area -->
+      <div class="content-area">
+          <!-- who we are -->
+          <div class="container">
+            <div class="row">
+              <!-- Side Bar -->
+              <div class="col-md-12">
+                <div>
+                  <h1 class="m-b20 m-t0 hkg-blue">小童軍團領袖</h1>
+                  <div class="w3-separator bg-primary"></div>
+                  <!-- Team Section Style 4 -->
+                  <div class="p-a30 bg-white m-b30">
+                    <!-- <div class="section-head">
+                      <h2 class="text-uppercase">各團領袖</h2>
+                    </div>  -->
+                    <div class="section-content text-center ">
+                      <div class="row">
+                        <div class="col-md-3 col-sm-6">
+                          <div class="w3-box m-b30">
+                            <div class="w3-media w3-img-overlay2 w3-img-effect zoom">
+                              <a href="javascript:;">
+                                <img width="358" height="460" src="images/our-team/pic4.jpg" alt="">
+                              </a>
+                            </div>
+                            <div class="p-a10">
+                              <h4 class="w3-title text-uppercase"><a href="javascript:;">旅長姓名</a></h4>
+                              <span class="w3-member-position">職級</span>
+                              <div>email@gmail.com</div>
+                            </div>
+                          </div>
                         </div>
-                        <!-- img -->
-                        <div class="m-b20 col-md-12">
-                            <img style="width: 100%;" src="images/scouts/img-youngScouts-bg.jpg" alt="">
+                        <div class="col-md-3 col-sm-6">
+                          <div class="w3-box m-b30">
+                            <div class=" w3-media w3-img-overlay2 w3-img-effect zoom">
+                              <a href="javascript:;">
+                                <img width="358" height="460" src="images/our-team/pic5.jpg" alt="">
+                              </a>
+                            </div>
+                            <div class="p-a10">
+                              <h4 class="w3-title text-uppercase"><a href="javascript:;">旅長姓名</a></h4>
+                              <span class="w3-member-position">職級</span>
+                              <div>email@gmail.com</div>
+                            </div>
+                          </div>
                         </div>
-                        <!-- img -->
+                        <div class="col-md-3 col-sm-6">
+                          <div class="w3-box m-b30">
+                            <div class="w3-media w3-img-overlay2 w3-img-effect zoom">
+                              <a href="javascript:;">
+                                <img width="358" height="460" src="images/our-team/pic6.jpg" alt="">
+                              </a>
+                            </div>
+                            <div class="p-a10 bg-white">
+                              <h4 class="w3-title text-uppercase"><a href="javascript:;">旅長姓名</a></h4>
+                              <span class="w3-member-position">職級</span>
+                              <div>email@gmail.com</div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                          <div class="w3-box m-b30">
+                            <div class="w3-media w3-img-overlay2 w3-img-effect zoom">
+                              <a href="javascript:;">
+                                <img width="358" height="460" src="images/our-team/pic7.jpg" alt="">
+                              </a>
+                            </div>
+                            <div class="p-a10">
+                              <h4 class="w3-title text-uppercase"><a href="javascript:;">旅長姓名</a></h4>
+                              <span class="w3-member-position">職級</span>
+                              <div>email@gmail.com</div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                     </div>
-                    <!-- Side Bar END -->
-                    <!-- Right Bar -->
+                  </div>
+                  <!-- Team Section Style 4 -->
+                  <!-- Team Section Style 4 -->
+                  <div class="p-a30 bg-white m-b30">
+                      <div class="section-head">
+                        <!-- <h2 class="text-uppercase">各團領袖</h2> -->
+                      </div> 
+                      <div class="section-content text-center ">
+                        <div class="row">
+                          <div class="col-md-3 col-sm-6">
+                            <div class="w3-box m-b30">
+                              <div class="w3-media w3-img-overlay2 w3-img-effect zoom">
+                                <a href="javascript:;">
+                                  <img width="358" height="460" src="images/our-team/pic4.jpg" alt="">
+                                </a>
+                              </div>
+                              <div class="p-a10">
+                                <h4 class="w3-title text-uppercase"><a href="javascript:;">旅長姓名</a></h4>
+                                <span class="w3-member-position">職級</span>
+                                <div>email@gmail.com</div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-md-3 col-sm-6">
+                            <div class="w3-box m-b30">
+                              <div class=" w3-media w3-img-overlay2 w3-img-effect zoom">
+                                <a href="javascript:;">
+                                  <img width="358" height="460" src="images/our-team/pic5.jpg" alt="">
+                                </a>
+                              </div>
+                              <div class="p-a10">
+                                <h4 class="w3-title text-uppercase"><a href="javascript:;">旅長姓名</a></h4>
+                                <span class="w3-member-position">職級</span>
+                                <div>email@gmail.com</div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-md-3 col-sm-6">
+                            <div class="w3-box m-b30">
+                              <div class="w3-media w3-img-overlay2 w3-img-effect zoom">
+                                <a href="javascript:;">
+                                  <img width="358" height="460" src="images/our-team/pic6.jpg" alt="">
+                                </a>
+                              </div>
+                              <div class="p-a10 bg-white">
+                                <h4 class="w3-title text-uppercase"><a href="javascript:;">旅長姓名</a></h4>
+                                <span class="w3-member-position">職級</span>
+                                <div>email@gmail.com</div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-md-3 col-sm-6">
+                            <div class="w3-box m-b30">
+                              <div class="w3-media w3-img-overlay2 w3-img-effect zoom">
+                                <a href="javascript:;">
+                                  <img width="358" height="460" src="images/our-team/pic7.jpg" alt="">
+                                </a>
+                              </div>
+                              <div class="p-a10">
+                                <h4 class="w3-title text-uppercase"><a href="javascript:;">旅長姓名</a></h4>
+                                <span class="w3-member-position">職級</span>
+                                <div>email@gmail.com</div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- Team Section Style 4 -->
                 </div>
+              </div>
+              <!-- Side Bar END -->
+              <!-- Right Bar -->
             </div>
-            <!-- who we are END -->
+          </div>
+          <!-- who we are END -->
         </div>
         <!-- contact area  END -->
     </div>
